# 27-Cap3-Ex1a8

./: .gitignore  IA_na_saúde.txt  IA_na_saúde_details.txt  README.md  Robótica.txt  Robótica_details.txt  Sustentabilidade.txt  Sustentabilidade_details.txt  crewai_flow.html  flow_log.txt  haiku_cherry_blossoms.txt  haiku_log.txt  plot.txt  poem.txt  poem_details.txt  pyproject.toml
src/poemflow/: haiku_flow.py  main.py
src/poemflow/crews/editor_crew/: editor_crew.py
src/poemflow/crews/editor_crew/config/: agents.yaml  tasks.yaml
src/poemflow/crews/haiku_crew/: haiku_crew.py
src/poemflow/crews/haiku_crew/config/: agents.yaml  tasks.yaml
src/poemflow/crews/poem_crew/: poem_crew.py
tests/: haiku ex 9ok.txt  main ex3ok.txt  main ex4ok.txt  main ex5ok.txt  main ex6ok.txt  main ex7ok.txt
