[project]
name = "poemflow"
version = "0.1.0"
description = "poemflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.14.0",
    "crewai[tools]>=0.83.0,<1.0.0",
    "pydantic>=2.10.3",
    "python-docx>=1.1.2",
]

[project.scripts]
kickoff = "poemflow.main:kickoff"
plot = "poemflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
